<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingHorizontal="12dp"
    android:orientation="vertical"
    android:layout_marginBottom="12dp"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="20sp"
        android:layout_marginTop="6dp"
        android:id="@+id/ascending_order"
        android:text="@string/ascending_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="20sp"
        android:layout_marginTop="6dp"
        android:id="@+id/descending_order"
        android:text="@string/descending_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="20sp"
        android:layout_marginTop="6dp"
        android:id="@+id/no_sort"
        android:text="@string/no_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>